b=250834, livemark fails to parse RSS feed (Atom feeds using rel without link); patch from keeda@hotpop.com, r=vladimir,a=asa